--- a/module_09/ex01/Makefile
+++ b/module_09/ex01/Makefile
@@ -1,15 +1,21 @@
-SRC = *.cpp
-NAME = rpn
-CC = c++ -Wall -Wextra -Werror -std=c++98 -g3
+CC		= c++
+CFLAGS	= -Wall -Wextra -Werror -std=c++98 -g3
+SRC		= main.cpp RPN.cpp
+OBJ		= $(SRC:.cpp=.o)
+NAME	= RPN
 
 all: $(NAME)
 
-$(NAME): $(SRC)
-	$(CC) $(SRC) -o $(NAME)
+$(NAME): $(OBJ)
+	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+
+%.o: %.cpp
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(NAME)
+	rm -f $(OBJ)
 
 fclean: clean
+	rm -f $(NAME)
 
 re: fclean all
