--- a/module_09/ex02/Makefile
+++ b/module_09/ex02/Makefile
@@ -1,8 +1,8 @@
 CC		= c++
 CFLAGS	= -Wall -Wextra -Werror -std=c++98 -g3
-SRC		= main.cpp BitcoinExchange.cpp
+SRC		= main.cpp RPN.cpp
 OBJ		= $(SRC:.cpp=.o)
-NAME	= btc
+NAME	= PergeMe
 
 all: $(NAME)
 
